[OS/2] Bug 391421: fix submenu highlight offset without breaking TB folder pane, p=mz@scntt/me, r=mkaply